add contact dropdown

--- a/frontend/styles/fonts.css
+++ b/frontend/styles/fonts.css
@@ -18,3 +18,7 @@
 .times-new-roman {
   font-family: "Times New Roman", Times, serif;
 }
+
+.source-sans-pro {
+  font-family: "SourceSansPro", sans-serif;
+}
